@@ -173,6 +173,35 @@ function SDI($msg="SDI") { echo "DEBUG INFO: $msg ".BR; } // DEBUG INFO!!!
 			$ret=date("Y.m.d H:i:s",$value);
 			return $ret;
 		}
+// Special processing of uptime
+		if($units=="s")
+		{
+			$ret="";
+			$days=floor($value/(24*3600));
+			if($days>0)
+			{
+				$value=$value-$days*(24*3600);
+			}
+			$hours=floor($value/(3600));
+			if($hours>0)
+			{
+				$value=$value-$hours*3600;
+			}
+			$min=floor($value/(60));
+			if($min>0)
+			{
+				$value=$value-$min*(60);
+			}
+			if($days==0)
+			{
+				$ret = sprintf("%02d:%02d:%02d", $hours, $min, $value);	
+			}
+			else
+			{
+				$ret = sprintf("%d days, %02d:%02d:%02d", $days, $hours, $min, $value);	
+			}
+			return $ret;
+		}
 // Special processing for seconds
 		if($units=="s")
 		{
@@ -208,7 +237,7 @@ function SDI($msg="SDI") { echo "DEBUG INFO: $msg ".BR; } // DEBUG INFO!!!
 				$ret=$ret.$t."m";
 				$value=$value-$t*(60);
 			}
-			$ret=$ret.$value."s";
+			$ret=$ret.round($value)."s";
 		
 			return $ret;	
 		}
